--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <section id="accueil" class="hero">
     <div class="container hero-content">
       <div class="hero-text">
-        <h2>Je suis  <strong>Zouley Mamouda Mahaman</strong>, ingénieure développeuse.
+        <p>Je suis  <strong>Zouley Mamouda Mahaman</strong>, ingénieure développeuse.
 Passionée par la technologie et l'innovation sociale, je conçois
   des solutions numériques au service du dévéloppement.
-        </h2>
+        </p>
         <a href="#projets" class="btn-primary">Voir mes projets</a>
       </div>
       <div class="hero-img">
-      <img src="image/code.jpg" alt="développement">
+      <img src="image/code.jpg" alt="développement" class="code-pic">
       </div>
     </div>
   </section>
